--- a/source/css/main.css
+++ b/source/css/main.css
@@ -4,8 +4,14 @@
     font-family: "Sulphur Point", sans-serif;
     font-style: normal;
 }
+
+html, body {
+    min-height: 100vw;
+    max-width: 100vw;
+}
+
 body {
     background-image: linear-gradient(0, rgb(255, 251, 251), rgb(189, 186, 186));
-    padding: 0%;
-    margin: 0%;
+    min-height: 100%;
+    max-width: 100%;
 }
